# hotel_agent

./: .gitignore  README.md  crear_reservas_foo.sql  db_procedures.sql  next_steps.md  pyproject.toml  script_hotel_bd_agent.sql
app/: config.py  llm.py  main.py
app/agent/: __init__.py  tools.py  workflow.py
app/database/: connection.py  queries.py  query.py
app/mcp/: map_client.py
app/rag/: embeddings.py  ingest.py  loader.py  pipeline.py  retriever.py  splitter.py  splitter02.py  vectorstore.py
mcp_servers/: map_server.py
